# QT_Game

./: Bullet.cpp  Bullet.h  Bullet.qml  CMakeLists.txt  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  Enemy.qml  main.cpp  main.qml
assets/: assets.qrc
qml/: main.qml
src/: main.cpp
src/core/: Controller.cpp  Controller.h
src/entities/: Bullet.h  Enemy.cpp  Enemy.h
